--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Niikotey Amon</h1>
         <p><em>Just a bloke learning how to <strong><a href="https://stackoverflow.com/">code</a></strong></em></p>
-        <p>So a little about me. I am 26 years old and i ❤ gaming and films. I am, currently single but pray to God that he brings back my girlfriend.</p>
+        <p>So a little about me. I am 26 years old and i ❤ gaming and films.</p>
         <p>That being said i am also an aspiring web developer and hopefully i will be working within the games industry in whatever capacity i can. God willing.</p>
       </td>
     </tr>
@@ -53,7 +53,7 @@
     <tr>
       <td>Web Development</td>
       <td>⭐⭐⭐</td>
-      <td>Video Games</td>
+      <td>Music production</td>
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
