--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img width="280" src="C:\Users\Niiko\Desktop\Web Development\images\circle-cropped.png" alt="Photo of me"></td>
+      <td><img width="280" src=images/circle-cropped.png alt="Photo of me"></td>
       <td>
         <h1>Niikotey Amon</h1>
-        <p><em>Just a bloke learning how to <strong><a href="https://stackoverflow.com/">code</a></strong></em></p>
-        <p>So a little about me. I am 26 years old and i ❤ gaming and films.</p>
-        <p>That being said i am also an aspiring web developer and hopefully i will be working within the games industry in whatever capacity i can. God willing.</p>
+        <p><em>A tech enthusiast with a passion for <strong><a href="https://stackoverflow.com/">coding</a></strong></em></p>
+        <p>Just a guy on my coding journey. Planing to be a future Web Developer</p>
       </td>
     </tr>
   </table>
@@ -23,9 +22,8 @@
   <h3><strong>Education</strong></h3>
   <ul style="line-height:180%">
     <li>Staffordshire University - Computer Games Design & Programming</li>
-    <li>Ealing and Hammersmith College - Photography, Psychology, Sociology</li>
+    <li>Ealing and Hammersmith College - A-Levels - Photography, Psychology, Sociology</li>
     <li>Alperton Community School - 8 GCSE's</li>
-    <li>Barham Priamry School</li>
   </ul>
   <hr size="3" noshade>
   <!-- WORK EXPERIANCE-->
@@ -52,7 +50,7 @@
   <table cellspacing="10">
     <tr>
       <td>Web Development</td>
-      <td>⭐⭐⭐</td>
+      <td>⭐⭐⭐⭐</td>
       <td>Music production</td>
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
